# WinPulse

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: design.md
src/: main.cpp
src/collectors/: cpu_collector.cpp  cpu_collector.h  disk_collector.cpp  disk_collector.h  i_collector.h  mem_collector.cpp  mem_collector.h  process_collector.cpp  process_collector.h
src/core/: analyzer.cpp  analyzer.h  config.cpp  config.h  engine.cpp  engine.h
src/models/: metrics.h
src/utils/: time_utils.cpp  time_utils.h
